force-app/main/default/objects/Meeting_WF_Related_Policy__c/Meeting_WF_Related_Policy__c.object-meta.xml
<CustomObject>
    <label>Meeting WF Related Policy</label>
    <nameField>
        <displayFormat>WFR-{00000}</displayFormat>
        <label>Meeting WF Related Policy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting WF Related Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>