force-app/main/default/objects/Meeting_WF_Related_Policy__c/fields/Can_Create__c.field-meta.xml
<CustomField>
    <fullName>Can_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Meeting WF config</description>
    <label>Can Create</label>
    <type>Checkbox</type>
</CustomField>