force-app/main/default/objects/Meeting_WF_Related_Policy__c/fields/Is_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Visible on Meeting</label>
    <type>Checkbox</type>
</CustomField>