force-app/main/default/objects/Meeting_WF_Related_Policy__c/fields/Record_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Filter__c</fullName>
    <description>Meeting WF config</description>
    <label>Record Type Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>