force-app/main/default/objects/Meeting_WF_Related_Policy__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <description>Meeting WF config</description>
    <label>Related Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>