force-app/main/default/objects/Meeting_WF_Related_Policy__c/fields/Role_Policy__c.field-meta.xml
<CustomField>
    <fullName>Role_Policy__c</fullName>
    <description>Meeting WF config</description>
    <label>Role Policy</label>
    <referenceTo>Meeting_WF_Role_Policy__c</referenceTo>
    <relationshipLabel>Related Policies</relationshipLabel>
    <relationshipName>Related_Policies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>